--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -14,7 +14,7 @@
                 {% for image in project.projectimage_set.all %}
                     <li>
                         <img class="open" src="{{ image.detail.url }}" alt="{{ image.caption }}" />
-                        {% if image.caption %}<p class="flex-caption">{{ image.caption }}</p>{% endif %}
+                        <p class="flex-caption">{{ image.caption }}&nbsp;</p>
                     </li>
                 {% endfor %}
                 </ul>
