cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -150,8 +150,8 @@
             controlNav: true,
             keyboardNav: true,
             touchSwipe: true,
-            prevText: "<",
-            nextText: ">",
+            prevText: "	&#171;",
+            nextText: "	&#187;",
             pausePlay: false,
             randomize: false,
             slideToStart: 0,
