--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -608,6 +608,7 @@ body > footer > .contact {
     -ms-transition: all .2s ease-in;
     -transition: all .2s ease-in;
     background: rgba(0,0,0,0.7);
+    font-size:2em;
     font-family:monospace;
     font-weight:bold;
     -webkit-box-sizing: border-box;
