cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -161,6 +161,8 @@
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
+        var height = $('.carousel').height() - 40;
+        $(".slideshow .flex-direction-nav a").css('top', height);
 
     });
 
