cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -161,7 +161,7 @@
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
-        var height = $('.slides').height() - 40;
+        var height = $('.slides').height();
         $(".slideshow .flex-direction-nav a").css('top', height);
 
     });
