cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -161,8 +161,8 @@
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
-        var slide_height = $('.slides').height();
-        $(".slideshow .flex-direction-nav a").css('top', slide_height);
+        var slideHeight = $('.slides').height();
+        $(".slideshow .flex-direction-nav a").css('top', slideHeight);
 
     });
 
