--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -161,7 +161,7 @@
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
-        var slideHeight = $('.slides li').height();
+        var slideHeight = $('.slides li img').height();
         $(".slideshow .flex-direction-nav a").css('top', slideHeight);
 
     });
