cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -162,7 +162,8 @@
             manualControls: "ul li a"
         });
         var slideHeight = $('.slides li img').height();
-        $(".slideshow .flex-direction-nav a").css('top', slideHeight);
+        alert(slideHeight);
+        //$(".slideshow .flex-direction-nav a").css('top', slideHeight);
 
     });
 
