cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -158,12 +158,9 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: false,
-            controlsContainer:".controls",
+            //controlsContainer:".controls",
             manualControls: "ul li a"
         });
-        var slideHeight = $('.slides li img').height();
-        alert(slideHeight);
-        //$(".slideshow .flex-direction-nav a").css('top', slideHeight);
 
     });
 
