cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -158,9 +158,12 @@
             animationLoop: true,
             pauseOnAction: true,
             pauseOnHover: false,
-            //controlsContainer:".controls",
+            controlsContainer:".controls",
             manualControls: "ul li a"
         });
+
+        var offset = $(".controls").height();
+        $(".slideshow .flex-direction-nav a").css('bottom',offset);
 
     });
 
