cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -162,7 +162,7 @@
             manualControls: "ul li a"
         });
 
-        var offset = $(".controls").height();
+        var offset = $(".controls").height() + 10;
         $(".slideshow .flex-direction-nav a").css('bottom',offset);
 
     });
