cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -433,7 +433,7 @@ body > footer > .contact {
     left:0;
     background:rgba(0,0,0,0.6);
     color:#fff;
-    line-height:3em;
+    line-height:40px;
     padding:0 10px;
     margin: 0;
     -webkit-box-sizing: border-box;
