--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -163,7 +163,7 @@
         });
 
         var offset = $(".controls").height() + 10;
-        $(".slideshow .flex-direction-nav a").css('bottom',offset);
+        $(".slideshow .flex-direction-nav").css('bottom',offset);
 
     });
 
