--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -596,6 +596,7 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav a {
     display:block;
+    position:absolute;
     width:33%;
     height:40px;
     line-height:40px;
@@ -621,11 +622,11 @@ body > footer > .contact {
 
 
 .slideshow .flex-direction-nav .next {
-    float:right;
+    right:0;
 }
 
 .slideshow .flex-direction-nav .prev {
-    float:left;
+   left:0;
 }
 
 /* details */
