--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -596,7 +596,6 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav a {
     display:block;
-    position:absolute;
     width:33%;
     height:40px;
     line-height:40px;
@@ -622,13 +621,11 @@ body > footer > .contact {
 
 
 .slideshow .flex-direction-nav .next {
-    top:0;
-    right:0;
+
 }
 
 .slideshow .flex-direction-nav .prev {
-    top:0;
-    left:20px;
+    margin-left:20px;
 }
 
 /* details */
