cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -621,11 +621,12 @@ body > footer > .contact {
 
 
 .slideshow .flex-direction-nav .next {
-
+    float:right;
 }
 
 .slideshow .flex-direction-nav .prev {
     margin-left:20px;
+    float:left;
 }
 
 /* details */
