--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -628,10 +628,11 @@ body > footer > .contact {
 
 
 .slideshow .flex-direction-nav .next {
+    margin-left:33%;
 }
 
 .slideshow .flex-direction-nav .prev {
-   
+   margin-left:20px;
 }
 
 /* details */
