--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -588,10 +588,16 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav {
     width: 14.2857143%;
+    padding-left:20px;
     position:absolute;
     bottom:0;
     right:10px;
     z-index:20000;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .slideshow .flex-direction-nav li {
@@ -628,11 +634,11 @@ body > footer > .contact {
 
 
 .slideshow .flex-direction-nav .next {
-    margin-left:33%;
+   
 }
 
 .slideshow .flex-direction-nav .prev {
-   margin-left:20px;
+   
 }
 
 /* details */
