cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -584,7 +584,7 @@ body > footer > .contact {
 }
 
 .slideshow .flex-direction-nav {
-    width: 14.2857143%;
+    width:120px;
     padding-left:20px;
     position:absolute;
     bottom:0;
@@ -598,7 +598,7 @@ body > footer > .contact {
 }
 
 .slideshow .flex-direction-nav li {
-    width:33%;
+    width:40px;
     float:right;
 }
 
@@ -611,7 +611,7 @@ body > footer > .contact {
 .slideshow .flex-direction-nav a {
     display:block;
     float:left;
-    width:100%;
+    width:40px;
     height:40px;
     line-height:40px;
     margin:0;
