cleaning up homepage layout

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -162,8 +162,8 @@
             manualControls: "ul li a"
         });
 
-        var offset = $(".controls").height() + 10;
-        $(".slideshow .flex-direction-nav").css('bottom',offset);
+        //var offset = $(".controls").height() + 10;
+        //$(".slideshow .flex-direction-nav").css('bottom',offset);
 
     });
 
