--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -535,7 +535,7 @@ body > footer > .contact {
 
 .slideshow nav.expand {
     position:absolute;
-    bottom:0;
+    top:0;
     right:40px;
     width: 40px;
     background: transparent;
@@ -587,7 +587,7 @@ body > footer > .contact {
     width:120px;
     padding-left:20px;
     position:absolute;
-    bottom:0;
+    top:0;
     right:10px;
     z-index:15000;
     -webkit-box-sizing: border-box;
