--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -567,6 +567,7 @@ body > footer > .contact {
     font-size:2em;
     font-family:monospace;
     font-weight:bold;
+    background:rgba(0,0,0,0.6);
 }
 
 .slideshow nav.expand a:hover {
@@ -600,6 +601,7 @@ body > footer > .contact {
 .slideshow .flex-direction-nav li {
     width:40px;
     float:right;
+    background:rgba(0,0,0,0.6);
 }
 
 .slideshow .flex-direction-nav li:first-child {
