--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -590,12 +590,17 @@ body > footer > .contact {
     position:absolute;
     top:10px;
     right:10px;
+    margin-right:-120px;
     z-index:15000;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.slideshow .carousel:hover .flex-direction-nav {
+    margin-right:0;
 }
 
 .slideshow .flex-direction-nav li {
