--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -591,27 +591,26 @@ body > footer > .contact {
     margin-top:0;
 }
 
+.slideshow:hover .flex-direction-nav {
+    margin-top:0;
+}
+
 .slideshow #close {
     display:none;
 }
 
 .slideshow .flex-direction-nav {
     width:120px;
-    padding-left:20px;
     position:absolute;
     top:10px;
     right:10px;
-    margin-right:-120px;
+    margin-top:-40px;
     z-index:15000;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-}
-
-.slideshow .carousel:hover .flex-direction-nav {
-    margin-right:0;
 }
 
 .slideshow .flex-direction-nav li {
