--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -604,13 +604,14 @@ body > footer > .contact {
     position:absolute;
     top:10px;
     right:10px;
-    margin-top:-40px;
+    margin-top:-40px;!important
     z-index:15000;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 .slideshow .flex-direction-nav li {
