--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -536,10 +536,10 @@ body > footer > .contact {
 
 .slideshow nav.expand {
     position:absolute;
-    display:none;
     top:0;
     right:40px;
     width: 40px;
+    height:0;
     background: transparent;
     z-index:20000;
     text-align: center;
@@ -588,7 +588,7 @@ body > footer > .contact {
 }
 
 .slideshow:hover nav.expand {
-   display:block;
+   height:40px;
 }
 
 .slideshow:hover .flex-direction-nav {
