--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -535,6 +535,9 @@ body > footer > .contact {
 
 .slideshow nav.expand {
     position:absolute;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     top:0;
     right:40px;
     width:40px;
@@ -573,6 +576,9 @@ body > footer > .contact {
     font-family:monospace;
     font-weight:bold;
     background:rgba(0,0,0,0.6);
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .slideshow nav.expand a:hover {
