--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -658,6 +658,7 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav a:hover {
     font-size:3em;
+    color: rgba(255,255,255,1.0);
 }
 
 .slideshow:hover .flex-direction-nav a {
