--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -160,7 +160,12 @@ body > footer {
     color:#777;
     text-transform: uppercase;
     font-size:.85em;
-    margin-top:10px;
+    padding: 0 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body > footer > .copyright {
