--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -161,6 +161,7 @@ body > footer {
     text-transform: uppercase;
     font-size:.85em;
     padding: 0 10px;
+    width:100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
