--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -261,10 +261,6 @@ body > footer > .contact {
     padding: 0;
 }
 
-#home article#profile header a {
-    text-decoration:none;
-}
-
 #home article#profile h2 {
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:1.71428em;
@@ -309,6 +305,10 @@ body > footer > .contact {
     color:rgba(255,255,255,0.8);
     width:100%;
     height:100%;
+}
+
+#home article.project header a {
+    text-decoration:none;
 }
 
 #home article.project img {
