--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -314,7 +314,7 @@ body > footer > .contact {
 }
 
 #home article.project.featured header h1 {
-    font-size:150%;
+    font-size:4em;
 }
 #home article.project header a {
     text-decoration:none;
