--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -161,21 +161,19 @@ body > footer {
     color:#777;
     text-transform: uppercase;
     font-size:.85em;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow: auto;
+    width:100%;
+    overflow: hidden;
 }
 
 body > footer > .copyright {
     float:left;
+    margin-left:20px;
 }
 
 body > footer > .contact {
     float:right;
     text-align:right;
+    margin-right:20px;
 }
 
 .sixth {
