--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -321,6 +321,7 @@ body > footer > .contact {
 #home article.project img {
     width:100%;
     display:block;
+    box-shadow:inset 0 0 10px #000000;
 }
 
 #home article.project.featured {
