--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -221,7 +221,11 @@ body > footer > .contact {
      padding: 10px;
 }
 
-
+.image {
+    -moz-box-shadow: inset 0 0 5px #888;
+    -webkit-box-shadow: inset 0 0 5px#888;
+    box-shadow: inset 0 0 5px #888;
+}
 
 /********** HOMEPAGE ***********/
 #home .content > div {
@@ -321,9 +325,6 @@ body > footer > .contact {
 #home article.project img {
     width:100%;
     display:block;
-    -moz-box-shadow: inset 0 0 5px #888;
-    -webkit-box-shadow: inset 0 0 5px#888;
-    box-shadow: inset 0 0 5px #888;
 }
 
 #home article.project.featured {
