--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -13,7 +13,9 @@
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
                     <li>
+                        <div class="image">
                         <img class="open" src="{{ image.detail.url }}" alt="{{ image.caption }}" />
+                        <div>
                         {% if image.caption %}<p class="flex-caption">{{ image.caption }}</p>{% endif %}
                     </li>
                 {% endfor %}
