--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -6,20 +6,22 @@
     {% if project.projectimage_set.all %}
         <section class="slideshow">
             <div class="carousel">
-                <nav class="expand">
-                    <a id="open" href="#zoomin" title="maximize slideshow">+</a>
-                    <a id="close" href="#zoomout" title="minimize slideshow">-</a>
-                </nav>
-                <ul class="slides">
-                {% for image in project.projectimage_set.all %}
-                    <li>
-                        <div class="image">
-                        <img class="open" src="{{ image.detail.url }}" alt="{{ image.caption }}" />
-                        <div>
-                        {% if image.caption %}<p class="flex-caption">{{ image.caption }}</p>{% endif %}
-                    </li>
-                {% endfor %}
-                </ul>
+                <div class="image">
+                    <nav class="expand">
+                        <a id="open" href="#zoomin" title="maximize slideshow">+</a>
+                        <a id="close" href="#zoomout" title="minimize slideshow">-</a>
+                    </nav>
+                    <ul class="slides">
+                    {% for image in project.projectimage_set.all %}
+                        <li>
+                            <div class="image">
+                            <img src="{{ image.detail.url }}" alt="{{ image.caption }}" />
+                            </div>
+                            {% if image.caption %}<p class="flex-caption">{{ image.caption }}</p>{% endif %}
+                        </li>
+                    {% endfor %}
+                    </ul>
+                </div>
             </div>
             <div class="controls">
                 <ul>
