cleaning up homepage layout

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -231,6 +231,7 @@ body > footer > .contact {
     -moz-box-shadow: inset 0 0 5px #888;
     -webkit-box-shadow: inset 0 0 5px#888;
     box-shadow: inset 0 0 5px #888;
+    background: transparent;
 }
 
 .image img {
