--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -225,15 +225,13 @@ body > footer > .contact {
     -moz-box-shadow: inset 0 0 5px #888;
     -webkit-box-shadow: inset 0 0 5px#888;
     box-shadow: inset 0 0 5px #888;
+    position: relative;
+    z-index: 100;
 }
 
-.image {
-    -moz-box-shadow: inset 0 0 5px #888;
-    -webkit-box-shadow: inset 0 0 5px#888;
-    box-shadow: inset 0 0 5px #888;
-    background: transparent;
+.image img {
     position: relative;
-    z-index: 2;
+    z-index: 99;
 }
 
 
