--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -226,11 +226,13 @@ body > footer > .contact {
     -webkit-box-shadow: inset 0 0 5px#888;
     box-shadow: inset 0 0 5px #888;
     background: transparent;
+    position:relative;
+    z-index:2;
 }
 
 .image img {
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 
