--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -222,9 +222,9 @@ body > footer > .contact {
 }
 
 .image {
-    -moz-box-shadow: inset 0 0 10px #888;
-    -webkit-box-shadow: inset 0 0 10px#888;
-    box-shadow: inset 0 0 10px #888;
+    -moz-box-shadow: inset 0 0 7px rgba(0,0,0,.75);
+    -webkit-box-shadow: inset 0 0 7px rgba(0,0,0,.75);
+    box-shadow: inset inset 0 0 7px rgba(0,0,0,.75);
 }
 
 .image img {
