--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -27,12 +27,14 @@
         {% for project in project_list|slice:"1:3" %}
             <article class="project box sixth" id="{{ project.slug }}">
                 <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+                <div class="image">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
                             <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
                     {% endif %}
                 {%  endfor %}
+                </div>
             </article>
         {% endfor %}
      </div>
@@ -40,12 +42,14 @@
         {% for project in project_list|slice:"3:7" %}
             <article class="project box half" id="{{ project.slug }}">
                 <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+                <div class="image">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
                             <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
                     {% endif %}
                 {%  endfor %}
+                </div>
             </article>
         {% endfor %}
     </div>
@@ -53,12 +57,14 @@
         {% for project in project_list|slice:"7:8" %}
             <article class="project box full featured" id="{{ project.slug }}">
                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+               <div class="image">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
                             <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
                     {% endif %}
                 {%  endfor %}
+               </div>
             </article>
         {% endfor %}
     </div>
@@ -66,6 +72,7 @@
         {% for project in project_list|slice:"8:" %}
            <article class="project box half" id="{{ project.slug }}">
                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+               <div class="image">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
@@ -73,6 +80,7 @@
                        </a>
                    {% endif %}
                {%  endfor %}
+               </div>
            </article>
        {% endfor %}
         <article class="text box full" id="news">
