--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -122,7 +122,24 @@
                     </li>
                     </ul>
                 </div>
+                <ul id="project-nav">
+                {% if project.get_previous_by_date_end %}
+                <li>
+                    <a class="next-proj"
+                       title="Next Project: {{ project.get_previous_by_date_end.title }}"
+                       href="{{ project.get_previous_by_date_end.get_absolute_url }}">➜</a>
+                </li>
+                {% endif %}
+                {% if project.get_next_by_date_end %}
+                <li>
+                    <a class="prev-proj"
+                       title="Previous Project: {{ project.get_next_by_date_end.title }}"
+                       href="{{ project.get_next_by_date_end.get_absolute_url }}">➜</a>
+                </li>
+                {% endif %}
+            </ul>
             </div>
+
          </section>
     </article>
 {% endblock content %}
