--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -125,15 +125,15 @@
                 <ul id="project-nav">
 
                 <li>
-                    <a class="next-proj"
+                    <a class="next-proj tease"
                        title="Next Project: {{ project.get_previous_by_date_end.title }}"
-                       href="{{ project.get_previous_by_date_end.get_absolute_url }}">➜</a>
+                       href="{{ project.get_previous_by_date_end.get_absolute_url }}">{{ project.get_previous_by_date_end.title }}</a>
                 </li>
                 
                 <li>
-                    <a class="prev-proj"
+                    <a class="prev-proj tease"
                        title="Previous Project: {{ project.get_next_by_date_end.title }}"
-                       href="{{ project.get_next_by_date_end.get_absolute_url }}">➜</a>
+                       href="{{ project.get_next_by_date_end.get_absolute_url }}">{{ project.get_next_by_date_end.title }}</a>
                 </li>
 
             </ul>
