--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -126,14 +126,14 @@
 
                 <li>
                     <a class="next-proj tease"
-                       title="Next Project: {{ project.get_previous_by_date_end.title }}"
-                       href="{{ project.get_previous_by_date_end.get_absolute_url }}">{{ project.get_previous_by_date_end.title }}</a>
+                       title="Next Project: {{ project.get_previous_by_date_end.name }}"
+                       href="{{ project.get_previous_by_date_end.get_absolute_url }}">{{ project.get_previous_by_date_end.name }}</a>
                 </li>
                 
                 <li>
                     <a class="prev-proj tease"
                        title="Previous Project: {{ project.get_next_by_date.title }}"
-                       href="{{ project.get_next_by_date.get_absolute_url }}">{{ project.get_next_by_date.title }}</a>
+                       href="{{ project.get_next_by_date.get_absolute_url }}">{{ project.get_next_by_date.name }}</a>
                 </li>
 
             </ul>
