--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -132,8 +132,8 @@
                 
                 <li>
                     <a class="prev-proj tease"
-                       title="Previous Project: {{ project.get_next_by_date.title }}"
-                       href="{{ project.get_next_by_date.get_absolute_url }}">{{ project.get_next_by_date.name }}</a>
+                       title="Previous Project: {{ project.get_next_by_date_end.name }}"
+                       href="{{ project.get_next_by_date_end.get_absolute_url }}">{{ project.get_next_by_date_end.name }}</a>
                 </li>
 
             </ul>
