--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -855,6 +855,14 @@ body > footer > .contact {
                url('images/bottom-bg.png') no-repeat left 10px;
 }
 
+.prev-proj .tease:after {
+    content: "";
+}
+
+.prev-proj .tease:before {
+    content: "content: " \00AB";";
+}
+
 /* expanded detail styles */
 
 .max .slideshow {
