--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -860,7 +860,7 @@ body > footer > .contact {
 }
 
 .prev-proj.tease:before {
-    content: "\00AB ";
+    content: "\00AB \00A0";
 }
 
 /* expanded detail styles */
