edited next and previous project links

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -6,6 +6,7 @@
     {%  gblock "firm_profile" for "content.ContentBlock" %}
 </article>
 <article id="news">
+    <h1>Recent News</h1>
     {% get_latest news.newsitem 1 as news %}
     {% for item in news %}
         <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
