edited next and previous project links

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -726,7 +726,7 @@ body > footer > .contact {
 
 .details ul, .details p {
     overflow: auto;
-    font-size:.85em;
+    /*font-size:.85em;*/
 }
 
 .details p {
