edited next and previous project links

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -840,7 +840,7 @@ body > footer > .contact {
 }
 
 .details .meta .date .month {
-    font-size: 1em;
+    font-size: .85em;
 }
 
 .details .meta .location {
