--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -126,14 +126,14 @@
 
                 <li class="box"><h2>Next Project</h2>
                     <a class="next-proj tease"
-                       title="Next Project: {{ project.get_previous_by_date_end.name }}"
-                       href="{{ project.get_previous_by_date_end.get_absolute_url }}">{{ project.get_previous_by_date_end.name }}</a>
+                       title="Next Project: {{ project.get_next_project.name }}"
+                       href="{{ project.get_next_project.get_absolute_url }}">{{ project.get_next_project.name }}</a>
                 </li>
                 
                 <li  class="box"><h2>Previous Project</h2>
                     <a class="prev-proj tease"
-                       title="Previous Project: {{ project.get_next_by_date_end.name }}"
-                       href="{{ project.get_next_by_date_end.get_absolute_url }}">{{ project.get_next_by_date_end.name }}</a>
+                       title="Previous Project: {{ project.get_previous_project.name }}"
+                       href="{{ project.get_previous_project.get_absolute_url }}">{{ project.get_previous_project.name }}</a>
                 </li>
 
             </ul>
