--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -45,7 +45,7 @@
                         {% if project.project_types.all %}
                             {% for category in project.project_types.all %}
                                 <li class="square">
-                                    <a href="#" title="{{ category.name }}" class="project-type square center">
+                                    <a href="{% url portfolio_projects_by_type category.slug %}" title="{{ category.name }}" class="project-type square center">
                                         {{ category.alternate_title }}
                                     </a>
                                 </li>
