--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -54,7 +54,7 @@
                         {% if project.landscape_types.all %}
                             {% for category in project.landscape_types.all %}
                                 <li class="square">
-                                    <a href="#" title="{{ category.name }}" class="landscape-type square center">
+                                    <a href="{% url portfolio_projects_by_landscape category.slug %}" title="{{ category.name }}" class="landscape-type square center">
                                         {{ category.alternate_title }}
                                     </a>
                                 </li>
