edited next and previous project links

--- a/futuregreen/templates/portfolio/projects_by_landscape.html
+++ b/futuregreen/templates/portfolio/projects_by_landscape.html
@@ -1,5 +1,5 @@
 {% extends 'portfolio/portfolio_base.html' %}
-
+{% block content %}
     {% block content_header %}
     <header>
     {% load category_tags %}
@@ -9,8 +9,11 @@
         {% endblock content_title %}
    </header>
     {% endblock content_header %}
-    {% block main %}
+{% block main %}
+    <section class="project-list">
     {% for project in category.landscapetype.project_set.all %}
         {% include "portfolio/project_snippet.html" %}
     {% endfor %}
-    {% endblock main %}
+    </section>
+ {% endblock main %}
+{% endblock content %}
