--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -290,6 +290,7 @@ body > footer > .contact {
 
 #home article.project header {
     display:none;
+    opacity:0;
     position:absolute;
     top:0;
     left:0;
@@ -302,10 +303,16 @@ body > footer > .contact {
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+    -ms-transition: all .3s ease-out;
+    -transition: all .3s ease-out;
 }
 
 #home article.project:hover header {
     display:block;
+    opacity:1.0;
 }
 
 #home article.project header h1 {
