--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -6,12 +6,10 @@
 </article>
 <article id="news">
     <h1>News</h1>
-    {% for item in news %}
-        <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
-        <h2>{{ item.title }}</h2>
-        {{ item.excerpt_html|safe|truncatewords_html:20 }}
-        <p><a href="#" class="tease">Read More</a></p>
-    {%  endfor %}
+    <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
+    <h2>{{ news.title }}</h2>
+    {{ news.excerpt_html|safe|truncatewords_html:20 }}
+    <p><a href="#" class="tease">Read More</a></p>
 </article>
 <section id="people">
     <h1>People</h1>
